#15 카카오 우편번호 서비스 검색 API 연결
- 주소 검색창 클릭 시 우편변호 검색 팝업창이 수행되게끔 API 및 script 연결
- 검색 결과를 검색창 value로 반환하게끔 구성

--- a/src/main/resources/templates/layouts/layout-header.html
+++ b/src/main/resources/templates/layouts/layout-header.html
@@ -14,7 +14,8 @@
         <!-- Topbar Search -->
         <form class="d-block d-sm-inline-block form-inline navbar-search" method="get" action="/search">
             <div class="input-group">
-                <input type="text" class="form-control bg-light border-0 small" placeholder="주소 검색..."
+                <input type="text" id="address-search-input" class="form-control bg-light border-0 small"
+                       placeholder="주소 검색..."
                        aria-label="Search" aria-describedby="basic-addon2" name="address">
                 <div class="input-group-append">
                     <button class="btn btn-primary" type="submit">
