--- a/src/main/resources/templates/layouts/layout-scripts.html
+++ b/src/main/resources/templates/layouts/layout-scripts.html
@@ -9,5 +9,17 @@
 <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/vendor/jquery-easing/js/jquery.easing.min.js"></script>
 <script src="/sb-admin/js/sb-admin-2.min.js"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+    window.onload = function () {
+        document.getElementById("address-search-input").addEventListener("click", function () {
+            new daum.Postcode({
+                oncomplete: function (data) {
+                    document.getElementById("address-search-input").value = data.address;
+                }
+            }).open();
+        });
+    }
+</script>
 </body>
 </html>
