--- a/src/main/resources/templates/layouts/layout-header.html
+++ b/src/main/resources/templates/layouts/layout-header.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <div class="d-block">
-        <h1 class="h2 text-center">주변 약국 검색 서비스</h1>
+        <h1 class="h2 text-center"><a href="/" class="text-dark page-link">주변 약국 검색 서비스</a></h1>
     </div>
     <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 shadow justify-content-center">
         <!-- Title -->
