--- a/src/main/resources/templates/layouts/layout-table.th.xml
+++ b/src/main/resources/templates/layouts/layout-table.th.xml
@@ -5,8 +5,12 @@
             <attr sel="tr[0]" th:each="searchResponse : ${searchResponses}">
                 <attr sel="td[0]" th:text="${searchResponse.pharmacyName}"/>
                 <attr sel="td[1]" th:text="${searchResponse.address}"/>
-                <attr sel="td[2]" th:href="${searchResponse.mapUrl}"/>
-                <attr sel="td[3]" th:href="${searchResponse.roadViewUrl}"/>
+                <attr sel="td[2]">
+                    <attr sel="a" th:href="${searchResponse.mapUrl}"/>
+                </attr>
+                <attr sel="td[3]">
+                    <attr sel="a" th:href="${searchResponse.roadViewUrl}"/>
+                </attr>
                 <attr sel="td[4]" th:text="${#numbers.formatDecimal(searchResponse.distance, 1, 2)} + ' km'"/>
             </attr>
         </attr>
