#19 단축 URL 관련 뷰데이터 매핑
- 약국 검색 결과 내 로드뷰, 길찾기 URL을 단축 URL로 컨버팅하도록 변경
- 단축 URL 관련 요청 처리를 위한 Controller 구현
-- 관련 테스트 코드 구성
- PharmacyRepository 테스트 코드 간 기존 데이터 정리하도록 개선
- 기존 요청 url들을 ContextPath에서 관리하도로 개선

--- a/src/main/resources/templates/layouts/layout-table.th.xml
+++ b/src/main/resources/templates/layouts/layout-table.th.xml
@@ -6,10 +6,10 @@
                 <attr sel="td[0]" th:text="${searchResponse.pharmacyName}"/>
                 <attr sel="td[1]" th:text="${searchResponse.address}"/>
                 <attr sel="td[2]">
-                    <attr sel="a" th:href="${searchResponse.mapUrl}"/>
+                    <attr sel="a" th:href="${searchResponse.mapUrl}" th:text="${searchResponse.mapUrl}"/>
                 </attr>
                 <attr sel="td[3]">
-                    <attr sel="a" th:href="${searchResponse.roadViewUrl}"/>
+                    <attr sel="a" th:href="${searchResponse.roadViewUrl}" th:text="${searchResponse.roadViewUrl}"/>
                 </attr>
                 <attr sel="td[4]" th:text="${#numbers.formatDecimal(searchResponse.distance, 1, 2)} + ' km'"/>
             </attr>
