#21 캐싱 활성화 API 구현
- 캐싱 기능 활성화 버튼 추가
- 캐싱 활성화 API 추가
-- 활성화 시 DB 기준 데이터들을 redis에 업로드
-- 관련 테스트 코드 구성

--- a/src/main/resources/templates/layouts/layout-header.html
+++ b/src/main/resources/templates/layouts/layout-header.html
@@ -24,6 +24,11 @@
                 </div>
             </div>
         </form>
+        <form class="d-block" method="get" action="/cache">
+            <button class="btn btn-success" type="submit">
+                캐싱
+            </button>
+        </form>
     </nav>
 </div>
 </body>
